fix: fixed scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -4,4 +4,10 @@
 
 body {
   font-family: 'Inter', sans-serif;
+  overflow-y: scroll;
+}
+
+main {
+  max-width: 100vw;
+  overflow-x: hidden;
 }
